# utils

./: .gitignore  LICENSE  README.md  gen_qrcode.py  generate_sermon_table.py  pyproject.toml  requirements.txt
docker/: README.md
docker/centos7-builder/: CentOS-Vault.repo  Dockerfile
pcco/qr/: gen.py
pcco/sermon/: gen_csv.py
scripts/: export-sermon-data.sh  format-bulletin-print.sh
